--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                -->
 
                <label for="fname">First name:</label>
-               <input type="text" name="fname" placeholder="Yahaya"><br><br>
+               <input type="text" name="fname" placeholder="pu your name here"><br><br>
                <label for="lname">Last name:</label>
-               <input type="text" name="lname" placeholder="Abubakar"><br><br>
+               <input type="text" name="lname" placeholder="put your name here"><br><br>
                <label for="lname"> Matric Number : </label>
-               <input type="text" name="lname" placeholder="U21ICT1014"><br><br>
+               <input type="text" name="lname" placeholder="put your matric number here"><br><br>
                <label for="lname"> E-mail : </label>
                <input type="text" name="lname" placeholder="balablue@tinubu.com"><br><br>
                <label for="lname"> password : </label>
