--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </tr>
                 <tr>
                   <td style="border: 1px solid black;"> h1 to h6</td>
-                  <td style="border: 1px solid black;"> used used to define HTML headings </td>
+                  <td style="border: 1px solid black;"> used to define HTML headings </td>
                 </tr>
                 <tr>
                   <td style="border: 1px solid black;"> p</td>
@@ -94,7 +94,7 @@
                -->
 
                <label for="fname">First name:</label>
-               <input type="text" name="fname" placeholder="pu your name here"><br><br>
+               <input type="text" name="fname" placeholder="put your name here"><br><br>
                <label for="lname">Last name:</label>
                <input type="text" name="lname" placeholder="put your name here"><br><br>
                <label for="lname"> Matric Number : </label>
